# lunarfetch

./: Cargo.toml  LICENSE  README.md  flake.nix  ibm-transpad-h.txt
.github/workflows/: audit-rust.yaml  check-and-lint.yaml  release-packaging.yaml
src/: hostnamectl.rs  logo.rs  main.rs  package_managers.rs
src/render/: mod.rs  squares.rs
src/utils/: hardware.rs  hostname.rs  mod.rs  music.rs  package_managers.rs  ps.rs  which.rs
