[package]
name = "lunarfetch"
version = "0.1.2"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["systemd"]
systemd = ["dep:serde", "dep:serde_json"]
posix = ["dep:sys-info", "dep:uname"]

[dependencies]
anyhow = "1.0.79"
owo-colors = { version = "4.0.0" }
pretty-duration = "0.1.1"
serde = { version = "1.0.195", optional = true, features = ["derive"] }
serde_json = { version = "1.0.111", optional = true }
sys-info = { version = "0.9.1", optional = true }
tokio = { version = "1.35.1", features = ["full"] }
uname = { version = "0.1.1", optional = true }
uptime_lib = "0.3.0"
zbus = { version = "3.14.1", features = ["tokio"] }
zvariant = "3.15.0"
